--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Wassberg Media</title>
-        <meta name="description" content="">
+        <meta name="description" content="Wassberg Media är ett nystartat företag som riktar in sig på bröloppsfilmning och att fånga känslan i en av de viktigaste dagarna i era liv.">
+		<meta name="author" content="Simon Kotlinski">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -36,17 +37,16 @@
 					<div id="feedContent">
 						<div>
 							<h3 style="margin-top:0px">Om mig</h3>
-							<p>Jag heter Cecilia Wassberg och bor i Stockholm. Jag studerar min sista termin tv-produktion på Kaggeholms folkhögskola, där jag främst utbildar mig till filmfotograf och redigerare. Jag är färdigutbildad till sommaren 2014, och kommer då satsa helhjärtat på bröllopsfilmning. 
+							<p>Jag heter Cecilia Wassberg och studerar tv-produktion på Kaggeholms folkhögskola i Stockholm, där jag främst utbildar mig till filmfotograf och redigerare. Wassberg Media är ett nystartat företag där jag riktar in mig på bröllopsfilmning.  
 							</p>
 						</div>
 						<div>
 							<br />
-
 							<h3 style="margin-top:0px">Bröllopsfilm</h3>
-							<p>En bröllopsfilm fångar känslan i en av de viktigaste dagarna i era liv. Jag kommer filma bröllopet med två kameror, tillsammans med en till filmfotograf. Jag anpassar mig efter era önskemål, om ni vill filma vigseln, middagen, festen, talen eller hela bröllopet bestämmer ni själva. 
+							<p>En bröllopsfilm fångar känslan i en av de viktigaste dagarna i era liv. Jag kommer filma ert bröllop med två kameror, tillsammans med en till filmfotograf. Jag anpassar mig efter era önskemål. Om ni vill filma vigseln, middagen, festen, talen eller hela bröllopet bestämmer ni själva. 
 <br /><br />
-Just nu har jag extra förmånliga priser på filmning + redigering av bröllopfilmer. Kontakta mig för förfrågningar och prisförslag. Om ni har olika funderingar kan vi även ha ett kostnadsfritt möte.
-
+Just nu har jag extra förmånliga priser på filmning och redigering av bröllopfilmer. Kontakta mig för förfrågningar och prisförslag. Om ni har olika funderingar kan vi även ha ett kostnadsfritt möte.
+							</p>
 					</div>
 					<div>
 						<br />
@@ -56,18 +56,22 @@ Just nu har jag extra förmånliga priser på filmning + redigering av bröllopf
 <br />
 072 555 00 25
 <br />
-Cecilia@Wassbergmedia.se
+<a href="mailto:c.wassberg@live.com?Subject=Bröllopsfilm" target="_top">c.wassberg@live.com</a>
+							</p>
 					</div>
 					<div>
 						<br />
-
 							<h3 style="margin-top:0px">Portfolio</h3>
+							<p>Ellinore och Ervins Bröllop</p>
+<iframe width="1280" height="750" src="http://www.youtube.com/embed/I2EthdK1BkU?rel=0&amp;hd=1" frameborder="0" allowfullscreen></iframe>
+<br/>
 					</div>
 					<div>
 							<h3>Inspiration</h3>
 <p>
 <ul>
-	<li><a href="http://vimeo.com/42805844">http://vimeo.com/42805844</a></li>
+	<li>James and Aubrey - <a href="http://vimeo.com/42805844">http://vimeo.com/42805844</a></li>
+	<li>Dylan and Tauri - <a href="https://vimeo.com/51316008">https://vimeo.com/51316008</a></li>
 </ul>
 					</div>
 					</div>
@@ -78,14 +82,14 @@ Cecilia@Wassbergmedia.se
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='http://www.google-analytics.com/analytics.js';
+			e.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            ga('create','UA-48617020-1');ga('send','pageview');
         </script>
+
     </body>
 </html>
